# Flourish

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Flourish/: CMakeLists.txt
Flourish/src/: flpch.h
Flourish/src/Flourish/: ObjC.mm
Flourish/src/Flourish/Api/: AccelerationStructure.cpp  AccelerationStructure.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  CommandEncoder.h  ComputeCommandEncoder.h  ComputePipeline.cpp  ComputePipeline.h  ComputeTarget.cpp  ComputeTarget.h  Context.cpp  Context.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetAllocator.cpp  DescriptorSetAllocator.h  FeatureTable.h  Framebuffer.cpp  Framebuffer.h  GraphicsCommandEncoder.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Pipeline.cpp  Pipeline.h  PipelineCommon.h  RenderCommandEncoder.cpp  RenderCommandEncoder.h  RenderContext.cpp  RenderContext.h  RenderGraph.cpp  RenderGraph.h  RenderPass.cpp  RenderPass.h  ResourceSet.cpp  ResourceSet.h  ResourceSetAllocator.cpp  ResourceSetAllocator.h  Shader.cpp  (+4 more)
Flourish/src/Flourish/Api/RayTracing/: AccelerationStructure.cpp  AccelerationStructure.h  RayTracingGroupTable.cpp  RayTracingGroupTable.h  RayTracingPipeline.cpp  RayTracingPipeline.h
Flourish/src/Flourish/Backends/Vulkan/: AccelerationStructure.cpp  AccelerationStructure.h  Buffer.cpp  Buffer.h  CommandBuffer.cpp  CommandBuffer.h  ComputeCommandEncoder.cpp  ComputeCommandEncoder.h  ComputePipeline.cpp  ComputePipeline.h  ComputeTarget.cpp  ComputeTarget.h  Context.cpp  Context.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetAllocator.cpp  DescriptorSetAllocator.h  Framebuffer.cpp  Framebuffer.h  GraphicsCommandEncoder.cpp  GraphicsCommandEncoder.h  GraphicsPipeline.cpp  GraphicsPipeline.h  RenderCommandEncoder.cpp  RenderCommandEncoder.h  RenderContext.cpp  RenderContext.h  RenderGraph.cpp  RenderGraph.h  RenderPass.cpp  RenderPass.h  ResourceSet.cpp  ResourceSet.h  ResourceSetAllocator.cpp  ResourceSetAllocator.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  (+2 more)
Flourish/src/Flourish/Backends/Vulkan/RayTracing/: AccelerationStructure.cpp  AccelerationStructure.h  RayTracingGroupTable.cpp  RayTracingGroupTable.h  RayTracingPipeline.cpp  RayTracingPipeline.h
Flourish/src/Flourish/Backends/Vulkan/Util/: Aftermath.cpp  Aftermath.h  Commands.cpp  Commands.h  Common.cpp  Common.h  Context.cpp  Context.h  DebugCheckpoints.cpp  DebugCheckpoints.h  DeleteQueue.cpp  DeleteQueue.h  DescriptorBinder.cpp  DescriptorBinder.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  Devices.cpp  Devices.h  DynamicOffsets.cpp  DynamicOffsets.h  FinalizerQueue.cpp  FinalizerQueue.h  Image.cpp  Image.h  Queues.cpp  Queues.h  Semaphore.cpp  Semaphore.h  SubmissionHandler.cpp  SubmissionHandler.h  Swapchain.cpp  Swapchain.h  Synchronization.cpp  Synchronization.h
Flourish/src/Flourish/Core/: Assert.h  Base.h  Log.h  PlatformDetection.h  Util.h
FlourishTesting/: CMakeLists.txt
FlourishTesting/lib/stb_image/: stb_image.cpp
FlourishTesting/src/FlourishTesting/: EntryPoint.cpp  MacWindow.h  MacWindow.mm  Tests.cpp  Tests.h  WindowsWindow.cpp  WindowsWindow.h
scripts/: BuildDebug.sh  ConfigureDebug.bat  ConfigureDebug.sh  ConfigureDebugNoAftermath.bat  ConfigureRelease.bat
